--- a/src/Lcobucci/ActionMapper/package.xml
+++ b/src/Lcobucci/ActionMapper/package.xml
@@ -10,11 +10,11 @@
   <email>lcobucci@gmail.com</email>
   <active>yes</active>
  </lead>
- <date>2011-09-13</date>
- <time>16:36:51</time>
+ <date>2011-09-16</date>
+ <time>15:02:58</time>
  <version>
-  <release>0.1.2</release>
-  <api>0.1.2</api>
+  <release>0.1.4</release>
+  <api>0.1.4</api>
  </version>
  <stability>
   <release>alpha</release>
@@ -22,15 +22,14 @@
  </stability>
  <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD Style</license>
  <notes>
-* Added support for dependency injection
-* Default content-type setted
+Minor improvement
  </notes>
  <contents>
   <dir baseinstalldir="Lcobucci/ActionMapper" name="/">
    <file baseinstalldir="Lcobucci/ActionMapper" md5sum="ab64d5a4176d33c69ab1639002e4db52" name="Action/Action.php" role="php" />
    <file baseinstalldir="Lcobucci/ActionMapper" md5sum="ad7da8184f67a148a34cf6d6e0364152" name="Action/ActionAlreadyMappedException.php" role="php" />
    <file baseinstalldir="Lcobucci/ActionMapper" md5sum="03e14ea4d5709f4c28e6d99f89dfe2fd" name="Action/ActionNotFoundException.php" role="php" />
-   <file baseinstalldir="Lcobucci/ActionMapper" md5sum="32d0c8127c1a019184cc494789f3879b" name="Action/AnnotatedController.php" role="php" />
+   <file baseinstalldir="Lcobucci/ActionMapper" md5sum="b746729239aff32629db2d930072d2e7" name="Action/AnnotatedController.php" role="php" />
    <file baseinstalldir="Lcobucci/ActionMapper" md5sum="c30ca67d8d0ee71c51a565c4bf4abe7b" name="Action/Mapper.php" role="php" />
    <file baseinstalldir="Lcobucci/ActionMapper" md5sum="642308c0947087bd058a6bbd23ef1c69" name="Action/MatchedAction.php" role="php" />
    <file baseinstalldir="Lcobucci/ActionMapper" md5sum="d60f61f79ece443a2ef69c8dfafa6a20" name="Annotations/RouteAnnotation.php" role="php" />
@@ -42,8 +41,8 @@
    <file baseinstalldir="Lcobucci/ActionMapper" md5sum="01de385b3a4fe2223d098ee65729a6ff" name="Filter/Filter.php" role="php" />
    <file baseinstalldir="Lcobucci/ActionMapper" md5sum="915c026ef59001c0111f926e7c97d521" name="Filter/FilterChain.php" role="php" />
    <file baseinstalldir="Lcobucci/ActionMapper" md5sum="d83412c7c005d3e672cca4813589f8e7" name="Http/ContentType.php" role="php" />
-   <file baseinstalldir="Lcobucci/ActionMapper" md5sum="16bb38ddfd748881e983b797fffcd087" name="Http/Request.php" role="php" />
-   <file baseinstalldir="Lcobucci/ActionMapper" md5sum="1a4487a1d62f30d8d22e2a651b607c4a" name="Http/Response.php" role="php" />
+   <file baseinstalldir="Lcobucci/ActionMapper" md5sum="afd361da0a63214199a73d1d42abcc25" name="Http/Request.php" role="php" />
+   <file baseinstalldir="Lcobucci/ActionMapper" md5sum="ec9b8a22acadc60283ff2cdec7ae86e3" name="Http/Response.php" role="php" />
    <file baseinstalldir="Lcobucci/ActionMapper" md5sum="97d63be41f8a243e63f91ecfc2643374" name="Http/Errors/BadRequestException.php" role="php" />
    <file baseinstalldir="Lcobucci/ActionMapper" md5sum="1a4be3cedf52867aebf188c6c279a7d4" name="Http/Errors/ForbiddenException.php" role="php" />
    <file baseinstalldir="Lcobucci/ActionMapper" md5sum="25377c5a2d5c1dfd056d27d8aeec95e3" name="Http/Errors/HttpException.php" role="php" />
@@ -122,6 +121,36 @@ Initial release
    <notes>
 * Added support for dependency injection
 * Default content-type setted
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.1.3</release>
+    <api>0.1.3</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2011-09-14</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD Style</license>
+   <notes>
+Minor fixes and improvements
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.1.4</release>
+    <api>0.1.4</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2011-09-16</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD Style</license>
+   <notes>
+Minor improvement
    </notes>
   </release>
  </changelog>
