--- a/src/Lcobucci/ActionMapper/package.xml
+++ b/src/Lcobucci/ActionMapper/package.xml
@@ -10,11 +10,11 @@
   <email>lcobucci@gmail.com</email>
   <active>yes</active>
  </lead>
- <date>2011-11-29</date>
- <time>23:52:32</time>
+ <date>2012-01-12</date>
+ <time>18:24:26</time>
  <version>
-  <release>0.1.8</release>
-  <api>0.1.8</api>
+  <release>0.1.9</release>
+  <api>0.1.9</api>
  </version>
  <stability>
   <release>alpha</release>
@@ -22,7 +22,7 @@
  </stability>
  <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD Style</license>
  <notes>
-Small fixes at the Path calculator
+Added getParam() and isAjax() methods
  </notes>
  <contents>
   <dir baseinstalldir="Lcobucci/ActionMapper" name="/">
@@ -208,6 +208,21 @@ Small fixes at the Path calculator
    <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD Style</license>
    <notes>
 Small fixes at the Path calculator
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.1.9</release>
+    <api>0.1.9</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2012-01-12</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD Style</license>
+   <notes>
+Added getParam() and isAjax() methods
    </notes>
   </release>
  </changelog>
